tests/fixtures/errors/cmp_type_mismatch.z
# Comparisons resolve as declared methods and arg-check their operands: i64's
# `==` expects an i64, so comparing an int to a bool is a type mismatch rather
# than a silently-bool result. (Records/variants that declare no comparison
# still fall back to structural equality, so this only bites declared types.)
main: function is {
    t: true
    x: 1 == t
    print "\{x}"
}
